# eeg-brain-interface

./: .gitignore  MARKER_ANNOTATION_README.md  README.md  analyze_annotated_blocks.py  analyze_epochs_example.py  debug_xdf_analyzer.py  electrode_subset_comparison.py  final_eegnet_comparison.py  preprocessing  preprocessing.py  pyproject.toml  requirements.txt  test_annotation_minimal.py  test_annotation_pipeline.py  test_pipeline_annotations.py
data/data7eeg_out_nb/: markers_all.json  trials_extracted.csv  trials_extracted.json
data7eeg_out_nb/: markers_all.csv
eeg_pipeline/: main.py
eeg_pipeline/src/: config.py  deep_models.py  feature_extraction.py  models.py  preprocessing.py  train.py
eeg_pipeline/tests/: test_feature_extraction.py  test_models.py  test_preprocessing.py
experiments/eeg_pipeline/: README.md  __init__.py  main.py  report.md
experiments/models/: EEGNet.py  LogReg.py
experiments/preprocessing/: preprocessing.py
notebooks/: data_check_up.ipynb  fif_read.ipynb  preprocessing_1.ipynb
notes/: TODO.md  info.md  notes.txt
scripts/: Block_difficulty_extractor.py  data_check_up.ipynb  fif_analysis.py  master_table_generator.py  mic_decibels.py  n_back_working_set_updated_including_QnA.py  n_back_working_set_updated_including_QnA_Difficulty_Markers.py  n_back_working_set_updated_including_QnA_NextCloud_update.py  preprocess_raw.py
scripts/notebooks/: SingleSessionPipeline_Prepro_Labels_Epochs_ML.ipynb
src/eeg_pipeline/: __init__.py  annotation.py  data_loading.py  epoching.py  main.py  marker_annotation.py  pipeline.py  plot.py  (+2 more)
(+70 files in other folders)
